--- a/Introductions/Karina.css
+++ b/Introductions/Karina.css
@@ -70,3 +70,48 @@ td, th{
     text-align: center;
     background-color: #E6F7F5;
 }
+
+#box-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 600px;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.box{
+    width: 100px;
+    height: 100px;
+    border-top: 1px solid #687291;
+    text-align: center;
+    font-family: Tahoma, sans-serif;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box:nth-child(odd) { background-color: #dfe1e7; }
+.box:nth-child(even) { background-color: #eeeff2; }
+
+.box:last-child{
+    background-color: #687291;
+    border: 4px solid black;
+}
+
+a:hover {
+    background-color: #1A535C;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+tr:nth-child(even){
+    background-color: #F2F2F2;
+}
+
+p:first-letter {
+    font-size: 1.8em;
+    font-weight: bold;
+}
