--- a/Frontend/homepage.css
+++ b/Frontend/homepage.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(255, 232, 198);
+}
+
 /* Navigation Bar */
 #logo{
     width: 80px;
@@ -25,32 +29,109 @@
 }
 
 /* Content Formatting underneath navbar */
-/* .main-content-format{
+.format{
     display: flex;
-    flex-direction: column;
-} */
+    justify-content: space-between;
+    gap: 30px;
+}
+ 
 
 /* Filter Section */
-#filter-container{
-    background-color: rgb(232, 125, 143);
-}
-
-.filter-bg{
-    position: fixed;
-    bottom: 20%;
-    width: 300px;
+.filter-bg {
+    position: sticky;
+    top: 20px; 
+    margin-top: 50%;
+    margin-left: 20px;
+    
+    align-self: flex-start;
+    width: 200px;
+    max-height: 90vh;
+    overflow-y: auto;
 
     display: flex;
     flex-direction: column;
     background-color: lightblue;
-    max-width: 20%;
-    
     padding: 20px;
     border-radius: 10px;
 }
 
-/* Main Content/Center piece */
+#filter-by{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    margin-top: 10px;
+}
+
+#filter-btns{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+    
+}
+
+/* Middle Center piece */
+.main-content-container {
+  flex: 1; /* Take up remaining space */
+  /* display: flex;
+  flex-direction: column; */
+}
+
+.main-bg{
+    text-align: center;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+    background-color: rgb(186, 126, 126);
+}
+
 #main-header-text{
     text-align: center;
     margin-top: 20px;
+}
+
+#with-without-btns{
+    display: flex;
+    flex-direction: row;
+}
+
+.btn-outline-primary{
+    background-color: pink;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+#textarea-ingredients{
+    border-top-left-radius: 0;
+}
+
+#ingredients-showcase-box{
+    background-color: rgb(199, 229, 255);
+    border-radius: 5px;
+    margin-top: 20px;
+    padding: 10px;
+    text-align: left;
+}
+
+/* Right side of Homepage */
+.right-container{
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding: 50px;
+
+    text-align: center;
+
+    background-color: pink;
+}
+
+.btn-primary{
+    padding: 20px;
+}
+
+#favorites-container{
+    margin-top: 15px;
+    border-radius: 5px;
+    background-color: aquamarine;
 }
