--- a/Culinova/client/src/components/Navbar.css
+++ b/Culinova/client/src/components/Navbar.css
@@ -1,6 +1,14 @@
 /* Navigation Bar */
 .nav-bar-container .navbar{
     background-color: #A8396D;
+    display: flex;
+    justify-content: space-between;
+    
+    max-width: 100vw;
+    width: 100%;
+
+    flex-wrap: nowrap;
+    box-sizing: border-box;
 }
 
 #logo{
