Finished Homepage's Frontend -- Fixed orange header text position, added submit button, Fixed right-container aka Cookbook-btn and favorites, Fixed Logout hover color

--- a/Culinova/client/src/components/Navbar.css
+++ b/Culinova/client/src/components/Navbar.css
@@ -72,6 +72,14 @@
     background-color: #f1d275!important;
 }
 
+.register:hover{
+    background-color: #EF7979 !important;
+}
+
+.register:active{
+    background-color: #EF7979 !important;
+}
+
 .logout:hover{
     background-color: #EF7979 !important;
 }
