--- a/Culinova/client/src/components/Filter.css
+++ b/Culinova/client/src/components/Filter.css
@@ -5,11 +5,20 @@
     max-width: 200px;
 }
 
+#filter-txt {
+    background-color: #FF9E6C;
+    /* border-top-left-radius: 5px;
+    border-top-right-radius: 5px; */
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+}
+
 /* Filter Section */
 .filter-bg {
     position: sticky;
     top: 20px; 
-    margin-top: 50%;
+    margin-top: 19%;
     margin-left: 20px;
     
     align-self: flex-start;
